<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">\@Timetable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="url_help">https://google.com</string>
    <string name="please_wait_timetable_is_loading">Please wait, timetable is loading.</string>
    <string name="subtitle">Aarhus Tech Timetable App</string>
    <string name="API_URL">http://mail.olivias.dk:3000/api/</string>
    <string name="location_perm_granted">Location permission granted.</string>
    <string name="location_perm_denied">Location permission denied. Exiting.</string>
    <string name="storage_perm_granted">Storage permission granted. Try adding room again.</string>
    <string name="storage_perm_denied">Can\'t add room without storage permission.</string>
    <string name="no_school_aps_found">No school WiFi access points found!</string>
    <string name="no_ext_storage_found_cannot_add_room">No external storage found. Can\'t add room!</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="add_room">Add room</string>
    <string name="room_placeholder">Dxxxx</string>
    <string name="scanning_for_aps">Scanning for APs</string>
    <string name="please_wait_for_first_fix">Please wait for first fix.</string>
    <string name="stop">Stop</string>
    <string name="scanning_status">Please walk around the room.\n%1$d APs visible.\n%2$d datapoints collected.</string>
    <string name="not_at_school">Not at school…</string>
    <string name="send_mail">Send mail…</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="settings">Settings</string>
    <string name="timetable_title">%1$s timetable for %2$s</string>
    <string name="no_timetables_to_find">No timetables to find. Please set UNI-C username in settings.</string>
    <string name="no_timetable_lessons_found">No timetable lessons found.</string>
    <string name="please_add_unic_username">Please add your Uni-C username in the settings menu before booking a room!</string>
    <string name="show_room_on_map">Show room on map</string>
    <string name="show_room_x_on_map">Show room %1$s on map</string>
    <string name="show_for_room">Show timetable for %1$s</string>
    <string name="show_for_teacher">Show timetable for %1$s</string>
    <string name="show_for_group">Show timetable for %1$s</string>
    <string name="show_timetable_for_room">Show timetable for room</string>
    <string name="show_timetable_for_group">Show timetable for group</string>
    <string name="show_timetable_for_teacher">Show timetable for teacher</string>
    <string name="Timetable">Timetable</string>
    <string name="set_room">Set room</string>
    <string name="debug">Debug</string>
    <string name="d2100">D2100</string>
    <string name="d2200">D2200</string>
    <string name="d2300">D2300</string>
    <string name="refresh">Refresh</string>
    <string name="timetable">Timetable</string>
    <string name="map">Map</string>
    <string name="help">Help</string>
    <string name="advanced">Advanced</string>
    <string name="manage_rooms">Manage rooms</string>
    <string name="version">Version</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_summary">Got any questions? Send us an email!</string>
    <string name="unic_login_username">UNI-C login username</string>
    <string name="none_set">(none set)</string>
    <string name="show_advanced">Show advanced/debug features</string>
    <string name="about_summary">\@Skema is an app that simplifies everything related to timetables at Aarhus Tech Dollerup 2.</string>
    <string name="about">About</string>

</resources>
