<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.EditTextPreference
        android:dialogLayout="@layout/pref_dialog_edittext_fix"
        android:key="pref_login"
        android:summary="@string/none_set"
        android:title="@string/unic_login_username" />

    <android.support.v7.preference.CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_advanced"
        android:summary=""
        android:title="@string/show_advanced" />

    <Preference
        android:summary="@string/about_summary"
        android:title="@string/about" />

    <Preference
        android:summary="@string/versionName"
        android:title="@string/version" />

    <Preference android:title="@string/help">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/url_help" />
    </Preference>

    <Preference
        android:key="pref_feedback"
        android:summary="@string/feedback_summary"
        android:title="@string/send_feedback" />


</android.support.v7.preference.PreferenceScreen>