<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group1">
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_access_time"
            android:checkable="true"
            android:title="@string/timetable" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:checkable="true"
            android:title="@string/map" />
    </group>
    <group android:id="@+id/nav_group2">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:checkable="true"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
    </group>

    <item android:title="@string/advanced">
        <menu>
            <item
                android:id="@+id/nav_rooms"
                android:icon="@drawable/ic_edit_location"
                android:checkable="true"
                android:title="@string/manage_rooms" />
        </menu>
    </item>
</menu>
